minimise template logic
